<resources>
    <string name="app_name">IdealApplication</string>
    <string name="action_settings">Information About Application</string>
    <string name ="familyTutorial">Family Stats</string>
    <string name="profilePicture_fragment">profilePicture</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="getJob_text">Job</string>
    <string name="getCountry_text">Country</string>
    <string name="ExtraInformation_text">New Text</string>
    <string name="job_Button">Job</string>
    <string name="school_Button">School</string>
    <string name="physical_Button">Work-Out</string>
    <string name="socialize_button">Socialize</string>
    <string name="moveTo_Button">Move</string>
    <string name="overallWelathTextView_text">Wealth</string>
    <string name="influenceTextView">Influence</string>
    <string name="overallWealthPercantage">Percentage</string>
    <string name="influencePercentageString">Percantage</string>
    <string name="enterName_hint">Enter Name</string>
    <string name="profileImageprofileiamgedialog">Profile Image</string>
    <string name="neighbourhoodTextView_text">Neigbourhood</string>
    <string name="friendsTextView_text">Friends</string>
    <string name="professionalAssociatesTextView_text">Professional Associates</string>
    <string name="looksTextView_text">Looks</string>
    <string name="worshippersTextView_text">Worshippers</string>
    <string name="custom_Family_Button_String">Custom Family</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="customFamilyButton_String">Custom Family</string>
    <string name="friendsAmountTextView_String">Friends</string>
    <string name="influenceAmountTextView_String">Influence</string>


    <string name="cusomFamilyToggle_String">Custom Family</string>
    <string name ="tax_text">Tax</string>

    <string name ="poorFamily_text">Poor Family</string>
    <string name ="middleFamily_text">Middle Family</string>
    <string name ="richFamily_text">Rich Family</string>
    <string name ="customFamily_text">Custom Family</string>

    <string name="age_Turn_text">AGE/TURN</string>

    <string name="schoolAttendanceAmount_text">0</string>
    <string name="workingOnPhysicalApp_text">0</string>
    <string name="socialisingWithFriends_text">0</string>
    <string name="familyButton_txt">Accept Family</string>
    <string name="accept_Country_text">Accept Country</string>
    <string name="playerNameText">N/A</string>

    <string name="customFamily_fatherTab_text">Father</string>
    <string name="customFamily_motherTab_text">Mother</string>
    <string name="customFamily_sisterTab_text">Sister</string>
    <string name="customFamily_brotherTab_text">Brother</string>
    <string name="continueButton_text">Continue</string>
    <string name="splash_screen_text">SplashImage</string>
    <string name="idealstudios_text">IDEAL Studios</string>
    <string name="health_text">Health</string>
    <string name="profile_image_text">Profile Image</string>
    <string name="alertDialog_content_text">New Text</string>
    <string name="alertDialog_icon_text">Alert Dialog Icon</string>
    <string name="reset_text">Reset</string>

    <string-array name="countries">
        <item>Irada</item>
        <item>Itican</item>
        <item>Albaq</item>
        <item>Trinentina</item>
        <item>Albico</item>
        <item>Ugeria</item>
        <item>Portada</item>
        <item>Kuwador</item>
        <item>Ukrark</item>
        <item>Rany</item>
        <item>Heaven</item>
    </string-array>

    <string-array name="familyTypes">
        <item>@string/poorFamily_text</item>
        <item>@string/middleFamily_text</item>
        <item>@string/richFamily_text</item>
    </string-array>


    <string-array name="genieChoices">
        <item>(1)Improve your physical Appearance</item>
        <item>(2)Increase the number of Worshippers</item>
        <item>(3)Increase the number of Friends</item>
        <item>(4)Increase the number of Professional Associates</item>
        <item>(5)Increase you Influence</item>
        <item>(6)Increase your Wealth</item>
        <item>(7)Choose any job you desire</item>
        <item>(0)Special</item>

    </string-array>

    <string-array name="jobChoices">
        <item>(1)Beggar</item>
        <item>(2)Vagrant</item>
        <item>(3)Intern</item>
        <item>(4)PackingBoy</item>
        <item>(5)Firefighter</item>
        <item>(6)Banker</item>
        <item>(7)Scientist</item>
        <item>(8)Independent</item>
        <item>(9)Business Owner</item>
        <item>(10)King</item>
        <item>(11)God</item>
        <item>(12)Omega</item>

    </string-array>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
