<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
    android:background="@color/backgroundColor">


    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:id="@+id/frameLayout">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="135dp"
            android:id="@+id/profileImageView"
            android:layout_gravity="left|top"
            android:contentDescription="@string/profilePicture"
            android:src="@android:mipmap/sym_def_app_icon" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/playerNameText"
            android:id="@+id/playerNameTextView"
            android:layout_gravity="left|bottom"
            android:textSize="25sp"
            android:inputType="textPersonName"
            android:hint="@string/enterName_hint" />
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/frameLayout"
        android:layout_toRightOf="@+id/frameLayout"
        android:layout_toEndOf="@+id/frameLayout"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/overallWelathTextView"
            android:id="@+id/overAllWealthTextView"
            android:layout_gravity="top"
            android:textColor="#ff8a54"
            android:textStyle="bold"
            android:textSize="30sp"
            android:background="#143f1c"
            android:padding="1dp"
            android:textIsSelectable="false" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/overallWealthProgressBar"
            android:max="100"
            android:indeterminate="false"
            android:padding="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overallWealthPercantage"
            android:id="@+id/overallWealthPercentage"
            android:layout_gravity="right"
            android:padding="1dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/influenceTextView"
            android:id="@+id/influenceTextView"
            android:textColor="@color/signatureColorOne"
            android:textStyle="bold"
            android:textSize="30sp"
            android:background="#3f0d13"
            android:padding="1dp"
            android:textIsSelectable="false" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/influenceProgressBar"
            android:max="100"
            android:indeterminate="false"
            android:padding="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/influencePercentageString"
            android:id="@+id/influencePercentageTextView"
            android:layout_gravity="right"
            android:padding="1dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/getJob_text"
            android:id="@+id/jobTextView"
            android:padding="1dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/getCountry_text"
            android:id="@+id/countryTextView"
            android:padding="1dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/getTax_text"
            android:id="@+id/taxTextView"
            android:padding="1dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/ExtraInformation_text"
            android:id="@+id/informationalTextView"
            android:layout_weight="1.05"
            android:padding="1dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/linearLayout"
        android:layout_toStartOf="@+id/linearLayout">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_Button"
            android:id="@+id/jobButton"
            android:layout_gravity="top|left|center_vertical"
            android:padding="15dp"
            android:elevation="@dimen/button_elevation" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/school_Button"
            android:id="@+id/schoolButton"
            android:layout_gravity="top|left|center_vertical"
            android:padding="15dp"
            android:elevation="@dimen/button_elevation" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/physical_Button"
            android:id="@+id/physicalButton"
            android:layout_gravity="top|left|center_vertical"
            android:padding="15dp"
            android:elevation="@dimen/button_elevation" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/socialize_button"
            android:id="@+id/socializeButton"
            android:layout_gravity="top|left|center_vertical"
            android:padding="15dp"
            android:elevation="@dimen/button_elevation" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/moveTo_Button"
            android:id="@+id/moveToButton"
            android:layout_gravity="top|left|center_vertical"
            android:padding="15dp"
            android:elevation="@dimen/button_elevation"
           />
    </LinearLayout>

</RelativeLayout>
