<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:theme="@style/AppTheme">
    <!-- Header aligned to top -->
    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/frameLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:id="@+id/profileImageView"
            android:layout_gravity="left|top"
            android:contentDescription="@string/profilePicture"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/age_Turn_text"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center|bottom"
            android:textSize="25sp"
            android:id="@+id/age_Turn_textView"
            android:textColor="@color/signatureColorOne" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/playerNameText"
            android:id="@+id/playerNameTextView"
            android:layout_gravity="top|center_vertical"
            android:textSize="25sp"
            android:hint="@string/enterName_hint"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/signatureColorOne" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="50dp"
        android:id="@+id/health_wealth_influence_linearlayout"
        android:layout_toRightOf="@+id/frameLayout"
        android:layout_toEndOf="@+id/frameLayout"
        android:weightSum="3"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/job_country_tax_layout">
    <!--Healh-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:id="@+id/healthlayout"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">


        <ProgressBar
            style="@style/CustomProgressBarHorizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:progress="100"
            android:secondaryProgress="80"
            android:id="@+id/healthProgressBar" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="#00000000"
            android:layout_alignLeft="@id/healthProgressBar"
            android:layout_alignTop="@id/healthProgressBar"
            android:layout_alignRight="@id/healthProgressBar"
            android:text="@string/health_text"
            android:id="@+id/healthTextView"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#60ff15" />
    </RelativeLayout>
    <!--Wealth-->
    <RelativeLayout
        android:id="@+id/header"
        android:background="#000"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="51dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/overallWelathTextView_text"
            android:id="@+id/overAllWealthTextView"
            android:layout_gravity="top|bottom"
            android:textColor="@color/signatureColorOne"
            android:textStyle="bold"
            android:textSize="30sp"
            android:background="#143f1c"
            android:padding="1dp"
            android:textIsSelectable="false"
           />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/overallWealthProgressBar"
            android:max="100"
            android:indeterminate="false"
            android:padding="1dp"
            android:layout_gravity="bottom"
           />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/overallWealthPercantage"
            android:id="@+id/overallWealthPercentage"
            android:layout_gravity="bottom|right"
            android:padding="1dp"

            android:gravity="right"
            android:textColor="@color/abc_secondary_text_material_dark" />


    </RelativeLayout>
    <!--Influence-->
    <RelativeLayout
        android:id="@+id/header1"
        android:background="#000"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="22dp">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/influenceTextView"
            android:id="@+id/influenceTextView"
            android:textColor="@color/signatureColorOne"
            android:textStyle="bold"
            android:textSize="30sp"
            android:background="#3f0d13"
            android:padding="1dp"
            android:textIsSelectable="false"
            android:layout_gravity="bottom"
            android:layout_alignParentTop="false" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/influenceProgressBar"
            android:max="100"
            android:indeterminate="false"
            android:padding="1dp"
            android:layout_gravity="bottom" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/influencePercentageString"
            android:id="@+id/influencePercentageTextView"
            android:layout_gravity="bottom|right"
            android:padding="1dp"
            android:gravity="right"
            android:textColor="@color/abc_secondary_text_material_dark" />
    </RelativeLayout>
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/job_country_tax_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_below="@+id/frameLayout"
        android:weightSum="3"
        style="@style/Base.Widget.AppCompat.ActionBar"
        android:background="#3f1930">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@drawable/border"
            android:text="@string/getJob_text"
            android:id="@+id/jobTextView"
            android:padding="1dp"
            android:textSize="18sp"
            android:layout_weight="1.00"
            android:layout_gravity="bottom"
            style="@style/ThemeOverlay.AppCompat.Dark"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/signatureColorOne" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/border"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/getCountry_text"
            android:id="@+id/countryTextView"
            android:padding="1dp"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            style="@style/Base.Widget.AppCompat.ActionBar"
            android:layout_weight="1.60"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/signatureColorOne" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/border"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tax_text"
            android:id="@+id/taxTextView"
            android:padding="1dp"
            android:textSize="18sp"
            android:layout_weight="0.40"
            android:layout_gravity="bottom"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/signatureColorOne" />



    </LinearLayout>

    <!--Body-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/content"
        android:gravity="center"
        android:layout_below="@+id/job_country_tax_layout"
        android:layout_above="@+id/continueButton">



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/ExtraInformation_text"
            android:id="@+id/informationalTextView"
            android:maxLines = "5"
            android:scrollbars = "vertical"
            android:padding="1dp"
            android:textSize="18sp"
            android:theme="@style/AppTheme"
            android:gravity="center"
            android:textColor="@color/signatureColorOne"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <!--Footer-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:background="#3f1930">

     <LinearLayout
         android:id="@+id/footer"
         android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
         android:background="#3f1930"
         android:gravity="center"
         android:weightSum="5"
         android:baselineAligned="false">


         <LinearLayout
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1.00"
             android:id="@+id/moveto_layout"
             android:layout_gravity="right">


             <Button

                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:text="@string/moveTo_Button"
                 android:id="@+id/moveToButton"

                 android:elevation="@dimen/button_elevation"
                 style="@android:style/Holo.SegmentedButton"
                 android:textSize="11sp"
                 android:textColor="@color/signatureColorOne"
                 android:gravity="center" />


         </LinearLayout>

         <LinearLayout
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1.00"
             android:id="@+id/school_layout"
             android:layout_gravity="right">


             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/schoolAttendanceAmount_text"
                 android:id="@+id/schoolAttendanceAmountTextView"
                 android:textAlignment="center"
                 android:layout_gravity="top|center_vertical"
                 android:gravity="center"
                 android:textColor="@color/signatureColorOne"
                 android:textSize="12sp" />

             <Button

                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:text="@string/school_Button"
                 android:id="@+id/schoolButton"
                 android:elevation="@dimen/button_elevation"
                 style="@android:style/Holo.SegmentedButton"
                 android:textSize="11sp"
                 android:textColor="@color/signatureColorOne"
                 android:gravity="center" />


         </LinearLayout>

         <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:id="@+id/physical_layout"
            android:layout_gravity="right">



            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/workingOnPhysicalApp_text"
                android:id="@+id/workingOnPhysicalAppTextView"
                android:textAlignment="center"
                android:layout_gravity="top|center_vertical"
                android:gravity="center"
                android:textColor="@color/signatureColorOne"
                android:textSize="12sp" />
            <Button

                android:layout_width="fill_parent"
                android:layout_height="86dp"
                android:text="@string/physical_Button"
                android:id="@+id/physicalButton"

                android:elevation="@dimen/button_elevation"
                style="@android:style/Holo.SegmentedButton"
                android:textSize="11sp"
                android:textColor="@color/signatureColorOne"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:id="@+id/socialize_layout"
            android:layout_gravity="right">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/socialisingWithFriends_text"
                android:id="@+id/socialisingWithFriendsTextView"

                android:textAlignment="center"
                android:layout_gravity="top|center_vertical"
                android:gravity="center"
                android:textColor="@color/signatureColorOne"
                android:textSize="12sp" />



            <Button

                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/socialize_button"
                android:id="@+id/socializeButton"
                android:elevation="@dimen/button_elevation"
                style="@android:style/Holo.SegmentedButton"
                android:textSize="11sp"
                android:textColor="@color/signatureColorOne"
                android:gravity="center" />

        </LinearLayout>


         <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:id="@+id/job_layout">

            <Button

                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/job_Button"
                android:id="@+id/jobButton"
                android:elevation="@dimen/button_elevation"
                style="@android:style/Holo.SegmentedButton"
                android:textSize="11sp"
                android:textColor="@color/signatureColorOne"
                android:gravity="center" />


        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:background="@drawable/button_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/continueButton_text"
        android:id="@+id/continueButton"
        android:textColor="@color/signatureColorOne"
        android:layout_above="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#3f1930" />


</RelativeLayout>